Validador de cedula terminado

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <div class="contenedor-principal">
         <div class="form-cedula">
-            <form action="#">
+            <form action="#" class="formulario-cedula">
                 <div class="titulo">
                     <h2>Validador de cédula Dominicana <img src="img/dodominicanrepublicflag_111681.png" alt="bandera dominicana"></h2>
                 </div>
                 <div class="group-input">
                     <label for="cedula"><i class="fad fa-id-card"></i> Ingrese su cédula de identidad</label>
-                    <input type="number" name="cedula" id="cedula" placeholder="Ingrese su cédula completa">
+                    <input class="cedulaInput" type="number" name="cedula" id="cedula" placeholder="Ingrese su cédula completa">
                 </div>
                 <div class="btn">
                     <button type="submit">Verificar</button>
