--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="enlaces">
                     <ul>
                         <li>
-                            <a href="#"><i class="fab fa-github"></i> Ver codigo</a>
+                            <a target="_blank" href="https://github.com/Miguel-Gonzalez18/validador-de-cedula"><i class="fab fa-github"></i> Ver codigo</a>
                         </li>
                         <li>
                             <a target="_blank" href="https://miguelportafolioweb.000webhostapp.com/"><i class="fad fa-code"></i> Desarrollado por Miguel Angel</a>
