--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <a target="_blank" href="https://github.com/Miguel-Gonzalez18/validador-de-cedula"><i class="fab fa-github"></i> Ver codigo</a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://miguelportafolioweb.000webhostapp.com/"><i class="fad fa-code"></i> Desarrollado por Miguel Angel</a>
+                            <a target="_blank" href="https://cool-youtiao-87f276.netlify.app/"><i class="fad fa-code"></i> Desarrollado por Miguel Angel</a>
                         </li>
                     </ul>
                 </div>
